# pet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =65.0.0  Dockerfile  Makefile  README.md  degiskenler.md  degiskenleri_listele.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: copilot-instructions.md
.github/projebellek/: README.md  corrected_index.json  index.json
.github/projebellek/entries/: pb_dok_v1_20250604_225611.json  pb_dok_v1_20250604_232637.json  pb_iş-_v1_20250604_232924.json  pb_kar_v1_20250604_212511.json  pb_kar_v1_20250604_212650.json  pb_kar_v1_20250604_212726.json  pb_kar_v1_20250604_212747.json  pb_kar_v1_20250604_212806.json  pb_kar_v1_20250604_212825.json  pb_kar_v1_20250604_213013.json  pb_kar_v1_20250604_213026.json  pb_kar_v1_20250604_213043.json  pb_kar_v1_20250604_213236.json  pb_kar_v1_20250604_232849.json  pb_kon_v1_20250604_213502.json  pb_kon_v1_20250604_213810.json  pb_kon_v1_20250604_232659.json  pb_kon_v1_20250604_232724.json  pb_mim_v1_20250604_212524.json  pb_ref_v1_20250604_213725.json  pb_sta_v1_20250604_213449.json  pb_sta_v1_20250604_213524.json  pb_sta_v1_20250604_213542.json  pb_sta_v1_20250604_213609.json  pb_sta_v1_20250604_213644.json  pb_sta_v1_20250604_213659.json  pb_sta_v1_20250604_213744.json  pb_sta_v1_20250604_213830.json  pb_sta_v1_20250604_214130.json  pb_sta_v1_20250604_215412.json  pb_sta_v1_20250604_232539.json  pb_sta_v1_20250604_232615.json  pb_sta_v1_20250604_232747.json  pb_sta_v1_20250604_232819.json
apps/api/: __init__.py
apps/api/v1/: __init__.py  exceptions.py  permissions.py  serializers.py  urls.py
apps/etiketler/: __init__.py  admin.py  apps.py  filters.py  managers.py  models.py  serializers.py  servisler.py  signals.py  urls.py  views.py
apps/etiketler/migrations/: 0001_initial.py
apps/etiketler/tests/: __init__.py  test_models.py  test_serializers.py  test_servisler.py  test_views.py
apps/hayvanlar/: __init__.py  admin.py  apps.py  filters.py  managers.py  models.py  serializers.py  servisler.py  signals.py  urls.py  utils.py  views.py
apps/hayvanlar/management/commands/: import_kopek_irklari.py  sync_dog_breeds.py
apps/hayvanlar/migrations/: 0001_initial.py  0002_hayvanfotograf_alter_hayvan_options_and_more.py  0003_make_kategori_nullable.py  0004_alter_kopekirk_options_alter_hayvan_il.py  0005_saglikdurumu_remove_hayvan_asilar_tamam_and_more.py
apps/hayvanlar/models/: __init__.py  hayvan.py  hayvan_fotograf.py  kopek_irk.py  saglik_durumu.py
apps/ilanlar/: __init__.py  admin.py  apps.py  filters.py  managers.py  models.py  permissions.py  serializers.py  servisler.py  signals.py  tasks.py  urls.py  views.py
apps/ilanlar/migrations/: 0001_initial.py
apps/kategoriler/: __init__.py  admin.py  apps.py  managers.py  models.py  serializers.py  servisler.py  urls.py  views.py
apps/kategoriler/management/commands/: create_categories.py
apps/kategoriler/migrations/: 0001_initial.py  __init__.py
apps/kullanicilar/: __init__.py  admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  servisler.py  urls.py  validators.py  views.py
apps/kullanicilar/management/: __init__.py
apps/kullanicilar/management/commands/: __init__.py  create_test_users.py
apps/kullanicilar/migrations/: 0001_initial.py  __init__.py
apps/ortak/: __init__.py  apps.py  constants.py  exceptions.py  middleware.py  models.py  pagination.py  permissions.py  utils.py  validators.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py
docker/: init-db.sql  redis.conf
docs/: adımlar.md  degiskenler.md  dizin_yapisi.md  etiket_uygulamasi_backend_tasarimi.md  etiketler_uygulamasi_prompts.md  faz3_rapor.md  harita_uygulamasi_backend_tasarimi_v2.md  hayvan_modeli_prompts.md  ilanlar_uygulamasi_backend_tasarimi_v1.md  kategori sistemi.yml  kategori_islemleri.md  kategori_sistemi_todo.md  kontrol.md  nihai dizin yapısı fazlar halinde.md  proje_dokuman.md  yapılacaklar.md
frontend/: package.json
frontend/src/: App.tsx  index.tsx
frontend/src/baglamlar/: AuthContext.tsx  BildirimBaglami.tsx  TemaBaglami.tsx
frontend/src/bilesenler/form/: GirisFormu.tsx
frontend/src/bilesenler/header/: AramaKutusu.tsx  KullaniciMenu.tsx  NavBar.tsx
frontend/src/bilesenler/kartlar/: HayvanKarti.tsx  IlanKarti.tsx
frontend/src/bilesenler/ortak/: BildirimToast.tsx  Dugme.tsx  HataMesaji.tsx  ModalPencere.tsx  Pagination.tsx  YuklemeDurumu.tsx
frontend/src/bilesenler/ozel/: FavoriButonu.tsx  OzellikEtiketleri.tsx  ResimGalerisi.tsx  YasBilgisi.tsx
frontend/src/hizmetler/: api.ts  blogService.ts  favoriService.ts  hayvanService.ts  ilanService.ts  kullaniciService.ts
frontend/src/kancalar/: useFavoriler.ts  useForm.ts  useHayvanFiltre.ts  usePagination.ts
frontend/src/magaza/: index.ts
frontend/src/magaza/reducers/: blogReducer.ts  hayvanReducer.ts  ilanReducer.ts
frontend/src/sayfalar/: AnaSayfa.tsx
frontend/src/types/: index.ts
frontend/src/yardimcilar/: dogrulayicilar.ts  formatlar.ts  tarih.ts  yerelDepo.ts
frontend/src/yonlendirme/: OzelRotalar.tsx  Rotalar.tsx
scripts/: projebellek.sh
templates/: index.html
templates/docs/: api_docs.html
templates/emails/: email_verification.html  email_verification.txt  welcome.html  welcome.txt
templates/errors/: 403.html  404.html  500.html
