# ==============================================================================
# 🐾 Setup Configuration - Legacy tool compatibility
# ==============================================================================
# Bazı araçlar için backward compatibility

[metadata]
name = evcil-hayvan-platformu
version = 1.0.0
description = 🐾 Hayvan sahiplenme platformu
long_description = file: README.md
long_description_content_type = text/markdown
author = Pet Platform Team
author_email = team@evcilhayvanplatformu.com
license = MIT
license_file = LICENSE
url = https://evcilhayvanplatformu.com

[options]
python_requires = >=3.11
include_package_data = True
zip_safe = False

# ==============================================================================
# 🔍 FLAKE8 - Linting configuration
# ==============================================================================
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    migrations,
    venv,
    env,
    .venv,
    .env,
    __pycache__,
    .git,
    .tox,
    build,
    dist,
    node_modules
per-file-ignores =
    __init__.py:F401
    settings/*.py:F405,F403
max-complexity = 10

# ==============================================================================
# 📦 ISORT - Import sorting
# ==============================================================================
[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_glob = */migrations/*,venv/*,env/*
known_django = django
known_first_party = apps,config
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
